<resources>
    <string name="app_name">Achievo</string>
    <string name="getStarted">GET STARTED</string>
    <string name="start1">Let’s Achieve</string>
    <string name="start2">Your Goals</string>
    <string name="start3">Define it.\nFollow us.\nWin it.</string>
    <string name="Login">Login</string>
    <string name="uLogin"><u>Login</u></string>
    <string name="signup">Sign Up</string>
    <string name="reset">Reset</string>
    <string name="resetP">Reset Password</string>
    <string name="otp">Get OTP</string>
    <string name="enterOtp">OTP</string>
    <string name="usignup"><u>Sign Up</u></string>
    <string name="LoginView">dd</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Npassword">New Password</string>
    <string name="CNpassword">Confirm New Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="notRobot">I’am not a robot</string>
    <string name="email">Email</string>
    <string name="forget"><u>forget password?</u></string>
    <string name="rememberMe">Remember me</string>
    <string name="or">OR</string>
    <string name="base">Don’t have an account? </string>
    <string name="base2">Already have an account?</string>
    <string name="welcome">Welcome back, </string>
    <string name="displayName">Safnas</string>
    <string name="analytics">QUICK Analytics</string>
    <string name="manageG">MANAGE GOALS</string>
    <string name="predict">PREDICT FUTURE</string>
    <string name="setGoal">Set New Goal</string>
    <string name="viewGoal">My Goals</string>
    <string name="getPrediction">Get New Prediction</string>
    <string name="myPrediction">My Predictions</string>
    <string name="getLocation">Find Goal Related Locations</string>
    <string name="enterGoal">Enter your goal</string>
    <string name="subGoal">GET STEP-BY-STEP INSTRUCTION</string>
    <string name="goalT">🎯 Total Goals: </string>
    <string name="goalTn">0</string>
    <string name="goalRisk">⚠️ Pending Goals: </string>
    <string name="goalRiskn">0</string>
    <string name="missGoal">🔥 Ongoing Goals: </string>
    <string name="missGoaln">0</string>
    <string name="curStreak">✅ Achieved Goals: </string>
    <string name="curStreakn">0</string>
    <string name="gen">Generating Steps…</string>
    <string name="goal">Goal: </string>
    <string name="goaldes">Write a Book</string>
    <string name="vsteps">View Steps</string>
    <string name="done">Done!</string>
    <string name="analize">Analyzing your goal…</string>
    <string name="loadreq">Understanding required actions…</string>
    <string name="gensbys">Generating achievable step-by-step instructions…</string>
    <string name="predM">Predict Your Progress</string>
    <string name="mygoals">My Goals</string>
    <string name="nogoal">No Goals Set Yet…</string>
    <string name="goalEx">Make Cup of Tea</string>
    <string name="goalStps">No of Steps: </string>
    <string name="goalStpsNo">07</string>
    <string name="predMc">Choose how you want to get your prediction:</string>
    <string name="cont">Continue</string>
    <string name="bog">Based On Goals</string>
    <string name="boc">Custom </string>
    <string name="achieved">Achieved</string>
    <string name="darkmode">Dark Mode</string>
    <string name="logout">Log Out</string>
    <string name="locationList">Saved Locations</string>
    <string name="api_key">AIzaSyBAjQmmds_4BwYVsUb1ZgygdmHGN01AhPo</string>
    <string name="locationEmpty">Locations Not Added Yet!</string>
    <string name="addLocation">Add New Location</string>
    <string name="progress">Progress: 60%</string>
    <string name="findLoc">Search location</string>
    <string name="plus_add">\u2795 Add New Location</string>
    <string name="deepseek_api_key">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</string>
    <string name="selectGoal">Select a Goal</string>
    <string name="progres">Progress: 0%</string>
    <string name="predicto">Predict Outcome</string>
    <string name="EnterTitle">Title</string>
    <string name="selectFrequency">Select Frequency</string>
    <string name="duration">Preferred Duration (hours)</string>
    <string name="eg">e.g., 3</string>
    <string name="gtitle">Goal Title</string>
    <string name="prediction">Prediction: </string>
    <string name="appear_here">Your prediction will appear here...</string>
    <string name="my_predictions">My Predictions</string>
    <string name="predictions">Predictions</string>
    <string name="saved_locations">My locations</string>
    <string name="goals">Goals</string>


</resources>