<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">


    <ImageView
        android:id="@+id/Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053"
        app:srcCompat="@drawable/logo_cut" />

    <TextView
        android:id="@+id/textView"
        style="@style/size32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.588">

        <!-- Email Input -->
        <EditText
            android:id="@+id/emailInput"
            style="@style/bodytext"
            android:layout_width="296dp"
            android:layout_height="54dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- New Password -->
        <EditText
            android:id="@+id/newPasswordInput"
            style="@style/bodytext"
            android:layout_width="296dp"
            android:layout_height="54dp"
            android:hint="@string/Npassword"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/emailInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Confirm Password -->
        <EditText
            android:id="@+id/confirmPasswordInput"
            style="@style/bodytext"
            android:layout_width="296dp"
            android:layout_height="54dp"
            android:hint="@string/CNpassword"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/newPasswordInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/resetbtn"
        style="@style/size28"
        android:layout_width="335dp"
        android:layout_height="67dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@null"
        android:clickable="true"
        android:elevation="6dp"
        android:padding="16dp"
        android:shadowColor="@color/white"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/reset"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <ImageView
        android:id="@+id/backI"
        android:layout_width="80dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        app:srcCompat="@drawable/back3" />

</androidx.constraintlayout.widget.ConstraintLayout>